AP-346 Imagetools dialog: Removed scrollbar on the dialog and fixed image overflowing editor on zoom in

--- a/src/less/theme/alien/unknowns.less
+++ b/src/less/theme/alien/unknowns.less
@@ -276,10 +276,6 @@
     display: flex;
   }
 
-  .tox-image-tools__image {
-    height: 410px;
-  }
-
   .tox-image-tools-edit-panel {
     height: 60px;
   }
