--- a/src/less/theme/components/image-tools/image-tools.less
+++ b/src/less/theme/components/image-tools/image-tools.less
@@ -13,10 +13,10 @@
     justify-content: center;
   }
 
-  // Moving height property to unknown.less
   .tox-image-tools__image {
     background-color: #666;
-    overflow: scroll;
+    height: 380px;
+    overflow: auto;
     position: relative;
     width: 100%;
   }
